Fix text alignment for about section

--- a/style.css
+++ b/style.css
@@ -116,7 +116,8 @@ body {
     border-radius: 5%;
 }
 
-.aboutMeText {
+.textPart {
+    align-items: center;
     text-align: center;
     margin-top: 25px;
 }
